[gd_scene load_steps=18 format=3 uid="uid://xa4hl5a6l100"]

[ext_resource type="Script" path="res://level_selection.gd" id="1_8vsk3"]
[ext_resource type="Texture2D" uid="uid://chu7k786uyyvq" path="res://Assets/Sprites/Background/whitebackground.png" id="2_l3qs6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jprx3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v54wf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jumeo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hro6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m31j3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05ssu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7cg4b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_git1a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_63dvw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v6mec"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ifvf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5llu8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kglls"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nts5m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2nyn"]

[node name="LevelSelection" type="Node2D"]
script = ExtResource("1_8vsk3")
metadata/_edit_vertical_guides_ = [499.0]
metadata/_edit_horizontal_guides_ = [-38.0]

[node name="Button" type="Button" parent="."]
offset_left = 68.0
offset_top = 237.0
offset_right = 209.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_jprx3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_v54wf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jumeo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hro6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m31j3")
text = "Tutorial"

[node name="Button2" type="Button" parent="."]
offset_left = 321.0
offset_top = 50.0
offset_right = 462.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "The basics"

[node name="Button3" type="Button" parent="."]
offset_left = 564.0
offset_top = 50.0
offset_right = 708.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Jump or Die
"

[node name="Button4" type="Button" parent="."]
offset_left = 798.0
offset_top = 50.0
offset_right = 939.0
offset_bottom = 149.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Precision is 
the key"

[node name="Button5" type="Button" parent="."]
offset_left = 321.0
offset_top = 237.0
offset_right = 462.0
offset_bottom = 333.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Echo"

[node name="Button6" type="Button" parent="."]
visible = false
offset_left = 564.0
offset_top = 237.0
offset_right = 708.0
offset_bottom = 333.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Going
Deeper"

[node name="Button7" type="Button" parent="."]
visible = false
offset_left = 798.0
offset_top = 237.0
offset_right = 940.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Peace"

[node name="Button8" type="Button" parent="."]
visible = false
offset_left = 321.0
offset_top = 402.0
offset_right = 462.0
offset_bottom = 498.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Secrets"

[node name="Button9" type="Button" parent="."]
visible = false
offset_left = 564.0
offset_top = 402.0
offset_right = 708.0
offset_bottom = 498.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "The Hall"

[node name="Button10" type="Button" parent="."]
offset_left = 798.0
offset_top = 402.0
offset_right = 942.0
offset_bottom = 498.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Challange"

[node name="Back" type="Button" parent="."]
offset_left = 462.0
offset_top = 577.0
offset_right = 549.0
offset_bottom = 635.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_hover_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_focus_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_05ssu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7cg4b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_git1a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_63dvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v6mec")
text = "Back"

[node name="Whitebackground" type="Sprite2D" parent="."]
modulate = Color(0.85098, 1, 0.941176, 1)
z_index = -1
position = Vector2(583, 330)
scale = Vector2(36.25, 20.5625)
texture = ExtResource("2_l3qs6")

[node name="Play" type="Button" parent="."]
offset_left = -171.0
offset_top = 276.0
offset_right = -17.0
offset_bottom = 337.0
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0.596078, 0.682353, 0.517647, 1)
theme_override_colors/font_hover_color = Color(0.839216, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifvf4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5llu8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kglls")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nts5m")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2nyn")
text = "START"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
